feat: XP/h tracker + FAB; battle/gathering-aware visibility; clean up Battle screen
- Add ExpTracker to GameRepository; expose xpTracker and hooks:
  - addPlayerExp(...) with toast + tracking
  - addSkillExp(...) with level-up toast + tracking
  - gatheringLive + startGathering/stopGathering + isGatheringActive()
  - battleLive + setBattleActive()/isBattleActive()  (for Battle screen)
- MainActivity:
  - Wire XP/h mini panel (FAB, panel, filter dialog)
  - Show FAB on Battle when repo.isBattleActive(), or on Skills when gathering is active
  - Robust destination detection (resolve IDs by name + label fallback)
  - Auto-hide panel when FAB hides
- SkillsFragment:
  - Use shared repo from MainActivity (no new instance)
  - Observe gatheringLive and keep FAB visibility in sync
  - Helper isGatheringRunningNow() to query repo state
- BattleFragment:
  - Remove wrong isGatheringRunningNow() call
  - Rely on repo.battleLive (flipped by CombatEngine) for FAB visibility
  - Minor UI polish: update monster label; tidy loot rendering
- CombatEngine:
  - Flip repo.setBattleActive(true/false) on start/stop/end
  - Add simple combat log + optional toasts
  - Grant small skill XP ticks (Attack/Defense); keep existing reward flow
  - Burn DoT effect (stacking, timed ticks)
- Fix: use entrySet() (not entrySet) when iterating inventory maps
- Misc: keep currency strip updates stable; no schema changes

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ constraintlayout = "2.1.4"
 firebaseCrashlyticsBuildtools = "3.0.6"
 navigationFragment = "2.9.3"
 navigationUi = "2.9.3"
+firebaseFirestore = "26.0.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -22,6 +23,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
